--- a/world/filezilla/.artixlinux/pkgbase.yaml
+++ b/world/filezilla/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: filezilla
-  version: 3.69.0-1
+  version: 3.69.1-1
   arch:
     - x86_64
   pkgname:
     - filezilla
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.69.0-1
+    version: 3.69.1-1
     packages:
-      - filezilla-3.69.0-1-x86_64.pkg.tar.zst
+      - filezilla-3.69.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
