--- a/world/openimageio/.artixlinux/pkgbase.yaml
+++ b/world/openimageio/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: openimageio
-  version: 2.5.18.0-2
+  version: 3.0.5.0-1
   arch:
     - x86_64
   pkgname:
     - openimageio
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.5.18.0-2
+    version: 3.0.5.0-1
     packages:
-      - openimageio-2.5.18.0-2-x86_64.pkg.tar.zst
+      - openimageio-3.0.5.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
