--- a/world/python-urwid/.artixlinux/pkgbase.yaml
+++ b/world/python-urwid/.artixlinux/pkgbase.yaml
@@ -1,9 +1,9 @@
 ---
 pkgbase:
   name: python-urwid
-  version: 2.6.15-2
+  version: 2.6.16-1
   arch:
-    - x86_64
+    - any
   pkgname:
     - python-urwid
 actions:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.6.15-2
+    version: 2.6.16-1
     packages:
-      - python-urwid-2.6.15-2-x86_64.pkg.tar.zst
+      - python-urwid-2.6.16-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
