--- a/world/ruby-activesupport/PKGBUILD
+++ b/world/ruby-activesupport/PKGBUILD
@@ -1,21 +1,27 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: David Runge <dvzrv@archlinux.org>
+# Maintainer: David Runge <dvzrv@archlinux.org>
 
 _name=activesupport
 pkgname=ruby-activesupport
 pkgver=8.0.1
-pkgrel=1
+pkgrel=5.2
 pkgdesc='A collection of utility classes and standard library extensions'
 arch=(any)
 url="https://github.com/rails/rails/tree/master/activesupport"
 license=(MIT)
 depends=(
   ruby
+  ruby-base64
+  ruby-benchmark
+  ruby-bigdecimal
   ruby-concurrent
   ruby-connection_pool
+  ruby-drb
+  ruby-logger
   ruby-i18n  # NOTE: bootstrap without (circular dependency)
   ruby-minitest
+  ruby-securerandom
   ruby-tzinfo
+  ruby-uri
   ruby-zeitwerk
 )
 makedepends=(
