--- a/world/ruby-async-http/.artixlinux/pkgbase.yaml
+++ b/world/ruby-async-http/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-async-http
-  version: 0.87.0-2
+  version: 0.87.0-5
   arch:
     - any
   pkgname:
     - ruby-async-http
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.87.0-2
+    version: 0.87.0-5
     packages:
-      - ruby-async-http-0.87.0-2-any.pkg.tar.zst
+      - ruby-async-http-0.87.0-5-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
