--- a/world/ruby-async-process/.artixlinux/pkgbase.yaml
+++ b/world/ruby-async-process/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-async-process
-  version: 1.4.0-2
+  version: 1.4.0-4
   arch:
     - any
   pkgname:
     - ruby-async-process
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.4.0-2
+    version: 1.4.0-4
     packages:
-      - ruby-async-process-1.4.0-2-any.pkg.tar.zst
+      - ruby-async-process-1.4.0-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
