--- a/world/ruby-augeas/.artixlinux/pkgbase.yaml
+++ b/world/ruby-augeas/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-augeas
-  version: 0.6.0-1
+  version: 0.6.0-3
   arch:
     - x86_64
   pkgname:
     - ruby-augeas
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.6.0-1
+    version: 0.6.0-3
     packages:
-      - ruby-augeas-0.6.0-1-x86_64.pkg.tar.zst
+      - ruby-augeas-0.6.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
