--- a/world/ruby-bake/PKGBUILD
+++ b/world/ruby-bake/PKGBUILD
@@ -2,14 +2,15 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-bake
-pkgver=0.18.2
-pkgrel=6
+pkgver=0.23.1
+pkgrel=3
 pkgdesc='A replacement for rake with a simpler syntax'
 arch=(any)
 url='https://github.com/ioquatix/bake'
 license=(MIT)
 depends=(
   ruby
+  ruby-bigdecimal
   ruby-samovar
 )
 checkdepends=(
@@ -19,7 +20,8 @@ checkdepends=(
 )
 options=(!emptydirs)
 source=(https://github.com/ioquatix/bake/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('78297c5c9f3218b7d774a6623166ea63bdc8f45398f65c9fbfc390c2d0ba59ee')
+sha512sums=('0abbec2f2d6c9f1bbd1c04e51bf5094fb239fa466c50af95959b0d483f5d80f9a0e6b050595230dfe6e6aac2a231e3597bc63c66c39033dd6a770d4aca7329f5')
+b2sums=('71419d1da57e87ed40d28df3ff07eaf834a11bec3cfe6b9adcba5f873059b18eddb1772b6f7661fa875ecb63477aa9c01317e52879a5a3f9341bc01dc0727d95')
 
 prepare() {
   cd bake-$pkgver
