--- a/world/ruby-bake-test-external/.artixlinux/pkgbase.yaml
+++ b/world/ruby-bake-test-external/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-bake-test-external
-  version: 0.4.0-1
+  version: 0.6.1-4
   arch:
     - any
   pkgname:
     - ruby-bake-test-external
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.4.0-1
+    version: 0.6.1-4
     packages:
-      - ruby-bake-test-external-0.4.0-1-any.pkg.tar.zst
+      - ruby-bake-test-external-0.6.1-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
