--- a/world/ruby-build-files/PKGBUILD
+++ b/world/ruby-build-files/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-build-files
-pkgver=1.9.0
-pkgrel=4
+pkgver=1.9.1
+pkgrel=2
 pkgdesc='Abstractions for handling and mapping paths'
 arch=(any)
 url='https://github.com/ioquatix/build-files'
@@ -15,21 +15,27 @@ makedepends=(
   ruby-rdoc
 )
 checkdepends=(
-  ruby-bake-modernize
+  ruby-bake
   ruby-bake-test
   ruby-bake-test-external
   ruby-bundler
   ruby-covered
+  ruby-decode
   ruby-sus
 )
 options=(!emptydirs)
 source=(https://github.com/ioquatix/build-files/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('3fd12bf39d9993f8f205d78d8f024099f52012f554de2f80bc2b251d2b323fa0')
+sha512sums=('118da8815a1d40d23f1009d1b469996a2a640c6e190dceb888c0778f37147eefb42e83b6a47cda484089338b4e7eb51717e5bf4c8304e55d0d95617f087fbe39')
+b2sums=('df8017f27fa12cb075403fe51083e7e689cce6f8a196beac71cc270890eca0713eb11102633623afea01c54867a341da11124b609a21816c4adef3726464445b')
 
 prepare() {
   cd build-files-$pkgver
   sed -e 's|~>|>=|' -e '/signing_key/d' -i build-files.gemspec
-  sed -i '/group :maintenance/,/end/d' gems.rb
+
+  sed --in-place \
+    --expression '/group :maintenance/,/end/d' \
+    --expression '/rubocop/d' \
+    gems.rb
 }
 
 build() {
