--- a/world/ruby-bundler/.artixlinux/pkgbase.yaml
+++ b/world/ruby-bundler/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-bundler
-  version: 2.6.0-3
+  version: 2.6.7-2
   arch:
     - any
   pkgname:
     - ruby-bundler
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.6.0-3
+    version: 2.6.7-2
     packages:
-      - ruby-bundler-2.6.0-3-any.pkg.tar.zst
+      - ruby-bundler-2.6.7-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
