--- a/world/ruby-character_set/.artixlinux/pkgbase.yaml
+++ b/world/ruby-character_set/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-character_set
-  version: 1.7.0-3
+  version: 1.8.0-3
   arch:
     - x86_64
   pkgname:
     - ruby-character_set
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.7.0-3
+    version: 1.8.0-3
     packages:
-      - ruby-character_set-1.7.0-3-x86_64.pkg.tar.zst
+      - ruby-character_set-1.8.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
