--- a/world/ruby-character_set/PKGBUILD
+++ b/world/ruby-character_set/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-character_set
-pkgver=1.7.0
+pkgver=1.8.0
 pkgrel=3
 pkgdesc='Build, read, write and compare sets of Unicode codepoints'
 arch=(x86_64)
@@ -18,6 +18,7 @@ makedepends=(
 checkdepends=(
   ruby-benchmark-ips
   ruby-bundler
+  ruby-csv
   ruby-get_process_mem
   ruby-rake
   ruby-rake-compiler
@@ -25,11 +26,11 @@ checkdepends=(
   ruby-regexp_parser
   ruby-regexp_property_values
   ruby-rspec
-  ruby-rubocop
+  ruby-warning
 )
 options=(!emptydirs)
 source=(git+https://github.com/jaynetics/character_set.git#tag=v$pkgver)
-sha256sums=('7eed239a907bdd748b48a5b4d4adeec0be9cb29c47741fba1c89896c15b7bc22')
+sha256sums=('f5521012d9dadae5a05b575d4eb5b65c772a1b14d3f9712584e89e2d58fa57dd')
 
 prepare() {
   cd character_set
