--- a/world/ruby-chef-utils/.artixlinux/pkgbase.yaml
+++ b/world/ruby-chef-utils/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-chef-utils
-  version: 19.0.88-1
+  version: 19.1.17-1
   arch:
     - any
   pkgname:
     - ruby-chef-utils
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 19.0.88-1
+    version: 19.1.17-1
     packages:
-      - ruby-chef-utils-19.0.88-1-any.pkg.tar.zst
+      - ruby-chef-utils-19.1.17-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
