--- a/world/ruby-console/.artixlinux/pkgbase.yaml
+++ b/world/ruby-console/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-console
-  version: 1.29.3-1
+  version: 1.30.2-4
   arch:
     - any
   pkgname:
     - ruby-console
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.29.3-1
+    version: 1.30.2-4
     packages:
-      - ruby-console-1.29.3-1-any.pkg.tar.zst
+      - ruby-console-1.30.2-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
