--- a/world/ruby-erubi/.artixlinux/pkgbase.yaml
+++ b/world/ruby-erubi/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-erubi
-  version: 1.13.1-1
+  version: 1.13.1-3
   arch:
     - any
   pkgname:
     - ruby-erubi
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.13.1-1
+    version: 1.13.1-3
     packages:
-      - ruby-erubi-1.13.1-1-any.pkg.tar.zst
+      - ruby-erubi-1.13.1-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
