--- a/world/ruby-faraday/.artixlinux/pkgbase.yaml
+++ b/world/ruby-faraday/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-faraday
-  version: 2.12.1-1
+  version: 2.13.0-3
   arch:
     - any
   pkgname:
     - ruby-faraday
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.12.1-1
+    version: 2.13.0-3
     packages:
-      - ruby-faraday-2.12.1-1-any.pkg.tar.zst
+      - ruby-faraday-2.13.0-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
