--- a/world/ruby-fast_gettext/.artixlinux/pkgbase.yaml
+++ b/world/ruby-fast_gettext/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-fast_gettext
-  version: 3.1.0-1
+  version: 3.1.0-3
   arch:
     - any
   pkgname:
     - ruby-fast_gettext
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.1.0-1
+    version: 3.1.0-3
     packages:
-      - ruby-fast_gettext-3.1.0-1-any.pkg.tar.zst
+      - ruby-fast_gettext-3.1.0-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
