--- a/world/ruby-get_process_mem/PKGBUILD
+++ b/world/ruby-get_process_mem/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=ruby-get_process_mem
 pkgver=0.2.7
 _commit=2897a5a76dec655bdc4242ec75538fc7896395f1
-pkgrel=4
+pkgrel=6
 pkgdesc='Get memory usage of a process in Ruby'
 arch=(any)
 url='https://github.com/zombocom/get_process_mem'
@@ -12,6 +12,7 @@ license=(MIT)
 depends=(
   ruby
   ruby-ffi
+  ruby-bigdecimal
 )
 makedepends=(
   git
