--- a/world/ruby-io-event/.artixlinux/pkgbase.yaml
+++ b/world/ruby-io-event/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-io-event
-  version: 1.9.0-2
+  version: 1.9.0-4
   arch:
     - x86_64
   pkgname:
     - ruby-io-event
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.9.0-2
+    version: 1.9.0-4
     packages:
-      - ruby-io-event-1.9.0-2-x86_64.pkg.tar.zst
+      - ruby-io-event-1.9.0-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
