--- a/world/ruby-io-stream/.artixlinux/pkgbase.yaml
+++ b/world/ruby-io-stream/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-io-stream
-  version: 0.6.1-1
+  version: 0.6.1-3
   arch:
     - any
   pkgname:
     - ruby-io-stream
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.6.1-1
+    version: 0.6.1-3
     packages:
-      - ruby-io-stream-0.6.1-1-any.pkg.tar.zst
+      - ruby-io-stream-0.6.1-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
