--- a/world/ruby-irb/.artixlinux/pkgbase.yaml
+++ b/world/ruby-irb/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-irb
-  version: 1.13.1-2
+  version: 1.14.3-4
   arch:
     - any
   pkgname:
     - ruby-irb
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.13.1-2
+    version: 1.14.3-4
     packages:
-      - ruby-irb-1.13.1-2-any.pkg.tar.zst
+      - ruby-irb-1.14.3-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
