--- a/world/ruby-json-schema/.artixlinux/pkgbase.yaml
+++ b/world/ruby-json-schema/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-json-schema
-  version: 5.1.0-1
+  version: 5.1.1-2
   arch:
     - any
   pkgname:
     - ruby-json-schema
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.1.0-1
+    version: 5.1.1-2
     packages:
-      - ruby-json-schema-5.1.0-1-any.pkg.tar.zst
+      - ruby-json-schema-5.1.1-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
