--- a/world/ruby-markly/PKGBUILD
+++ b/world/ruby-markly/PKGBUILD
@@ -2,9 +2,9 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-markly
-pkgver=0.10.0
+pkgver=0.13.0
 _cmark_gfm_commit=766f161ef6d61019acf3a69f5099489e7d14cd49
-pkgrel=4
+pkgrel=3
 pkgdesc='CommonMark parser and renderer. Written in C, wrapped in Ruby.'
 arch=(x86_64)
 url='https://github.com/ioquatix/markly'
@@ -17,7 +17,6 @@ makedepends=(
 )
 checkdepends=(
   ruby-bake
-  ruby-bake-modernize
   ruby-bake-test
   ruby-build-files
   ruby-covered
@@ -28,15 +27,25 @@ checkdepends=(
 options=(!emptydirs)
 source=(https://github.com/ioquatix/markly/archive/v$pkgver/$pkgname-$pkgver.tar.gz
         https://github.com/github/cmark-gfm/archive/$_cmark_gfm_commit/cmark-gfm-$_cmark_gfm_commit.tar.gz)
-sha256sums=('79546ab840da22f03faa9be0e65eeacecdf7ca569fe89599e738d6aede4abdce'
+sha256sums=('46ebe03fe49eed65f2b63ddde9e056f0b7fc49cdf56e15e69bb13d5d4c4a787d'
             'e95a1300cfe4c5b5ad68af6a77855df823b5d813334910a41991af0f70575d66')
 
 prepare() {
   cd markly-$pkgver
+
   rmdir cmark-gfm
   ln -s ../cmark-gfm-$_cmark_gfm_commit cmark-gfm
-  sed 's/~>/>=/;/signing_key/d' -i markly.gemspec
-  sed '/bake-gem/d;/utopia-project/d' -i gems.rb
+
+  # update gemspec/Gemfile to allow newer version of the dependencies
+  sed --in-place --regexp-extended \
+    --expression 's|~>|>=|g' \
+    --expression '/signing_key/d' \
+    markly.gemspec
+
+  sed --in-place \
+    --expression '/group :maintenance/,/end/d' \
+    --expression '/rubocop/d' \
+    gems.rb
 }
 
 build() {
